# Property_Manager

./: .eslintrc.json  .gitignore  .prettierignore  CNAME  Makefile  README.md  eslint.config.cjs  index.html  package.json  pyproject.toml  sites.config.json
config/: images.json  settings.json
css/: main.css  styles.css
css/base/: reset.css  typography.css  variables.css
css/components/: buttons.css  cards.css  footer.css  hero-bullets.css  hero.css  investment.css  modal.css  utilities.css
css/layout/: containers.css  grid.css  patterns.css  sections.css
docs/: API-REFERENCE.md  ARCHITECTURE.md  BROWSER-SUPPORT.md  CONFIGURATION.md  DEPLOY.md  IMAGE-SYSTEM.md  MULTISITE-GUIDE.md  QUICK-REFERENCE.md  README.md  SETUP-GUIDE.md  SMART-MAPPER.md
js/: app-multisite.js  images.js  logger.js
scripts/: audit_drive_files.py  cleanup_project.py  config_loader.py  create-deployment.bat  create-deployment.sh  generate_url_template.py  get_drive_ids.py  serve.ps1  serve.sh  setup_drive_api.py  smart_site_mapper.py  test-multisite.html  test-server.bat  test-server.sh  update_site_data.py
sites/_template/: data.json
sites/lancaster-12/: data.json  images.json
